[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lingbot-world"
version = "1.0.0"
description = "LingBot-World: Advancing Open-source World Models"
authors = [
    { name = "Robbyant Team" }
]
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "torchaudio>=2.4.0",
    "opencv-python>=4.9.0.80",
    "diffusers>=0.31.0",
    "transformers>=4.49.0",
    "tokenizers>=0.20.3",
    "accelerate>=1.1.1",
    "tqdm",
    "imageio",
    "easydict",
    "ftfy",
    "imageio-ffmpeg",
    "numpy>=1.23.5,<2",
    "scipy",
    "einops>=0.8.2",
    "flash-attn>=2.8.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "isort",
    "mypy",
    "huggingface-hub"
]

[project.urls]
homepage = "https://technology.robbyant.com/lingbot-world"
documentation = "https://github.com/robbyant/lingbot-world"
repository = "https://github.com/robbyant/lingbot-world"
huggingface = "https://huggingface.co/robbyant/lingbot-world-base-cam"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[tool.setuptools]
packages = ["wan"]

[tool.setuptools.package-data]
"wan" = ["**/*.py"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

